--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       2: Установить звук уведомления<br>
      <span class="callrec">3: Запись звонков ВКЛ/АВТО/ВЫКЛ</span><br>
       4: Установить приложение<br>
-      5: Включить меню разроботчика<br>
+      5: Включить меню разработчика<br>
       6: Войти в инженерное меню<br>
       7: Прокси ВКЛ/ВЫКЛ<br>
       8: Установить прокси хост/порт<br>
